--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
             <div><img src="images/C.jpg" alt=""></div>
             <div class="Image-Collag">
                 <img src="images/D.jpg" alt="">
-                <img src="images/D.jpg" alt="">
+                <img src="images/E.jpg" alt="">
             </div>
         </div>
         <div class="row">
-            <div><img src="images/E.jpg" alt=""></div>
+            <div><img src="images/F.jpg" alt=""></div>
             <div class="image-divided">
                 <img src="images/G.jpg" alt="">
                 <img src="images/G.jpg" alt="">
                 <img src="images/G.jpg" alt="">
                 <img src="images/G.jpg" alt="">
             </div>
-            <div><img src="images/F.jpg" alt=""></div>
+            <div><img src="images/H.jpg" alt=""></div>
         </div>
     </main>
 </body>
